Fix mobile overflow issue

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -18,6 +18,7 @@
 body {
   background: $c-cod-gray;
   color: $c-silver;
+  overflow-x: hidden;
 }
 
 .neon {
